.ros/log/e115590a-94a0-11ec-bcc1-7c507959f385/gripper_action_server-3.log
[rospy.client][INFO] 2022-02-23 12:05:24,909: init_node, name[/gripper_action_server], pid[16331]
[xmlrpc][INFO] 2022-02-23 12:05:24,909: XML-RPC server binding to 0.0.0.0:0
[xmlrpc][INFO] 2022-02-23 12:05:24,910: Started XML-RPC server [http://FM00351-u:35365/]
[rospy.impl.masterslave][INFO] 2022-02-23 12:05:24,910: _ready: http://FM00351-u:35365/
[rospy.init][INFO] 2022-02-23 12:05:24,910: ROS Slave URI: [http://FM00351-u:35365/]
[xmlrpc][INFO] 2022-02-23 12:05:24,911: xml rpc node: starting XML-RPC server
[rospy.registration][INFO] 2022-02-23 12:05:24,911: Registering with master node http://localhost:11311
[rospy.init][INFO] 2022-02-23 12:05:25,011: registered with master
[rospy.rosout][INFO] 2022-02-23 12:05:25,011: initializing /rosout core topic
[rospy.rosout][INFO] 2022-02-23 12:05:25,015: connected to core topic /rosout
[rospy.simtime][INFO] 2022-02-23 12:05:25,017: /use_sim_time is not set, will not subscribe to simulated time [/clock] topic
[rospy.internal][INFO] 2022-02-23 12:05:25,271: topic[/rosout] adding connection to [/rosout], count 0
[rospy.internal][INFO] 2022-02-23 12:05:28,852: topic[/gripper_action_server/result] adding connection to [/gripper_action_client], count 0
[rospy.internal][INFO] 2022-02-23 12:05:28,852: topic[/gripper_action_server/feedback] adding connection to [/gripper_action_client], count 0
[rospy.internal][INFO] 2022-02-23 12:05:28,853: topic[/gripper_action_server/status] adding connection to [/gripper_action_client], count 0
[rospy.internal][INFO] 2022-02-23 12:05:28,894: topic[/gripper_action_server/cancel] adding connection to [http://FM00351-u:34949/], count 0
[rospy.internal][INFO] 2022-02-23 12:05:28,895: topic[/gripper_action_server/goal] adding connection to [http://FM00351-u:34949/], count 0
[rosout][INFO] 2022-02-23 12:05:28,931: state: initializing
[rosout][INFO] 2022-02-23 12:05:28,933: controller is started now
[rosout][INFO] 2022-02-23 12:05:28,936: -----
Available commands

r: Reset
a: Activate
cal obit cbit width: Calibrate return 1 bit in mm
c: Close (full speed & force)
o: Open (full speed & force)
g: Grap (minimal speed & force)
GoTo pos speed force
f x: Set force during trajectory to x
sin amplitude period duration
trap height small_b large_b duration
tri amplitude period duration
samplePoints t_list pos_list
fg: Grap with force detection (minimal speed & 1 N force)
fg x: Grap with x Newton (minimal speed)
sfg: Grap with force detection (minimal speed & 1 N force)
sfg x: Grap with x Newton (minimal speed)
sq x: Squeeze x positions
fc x: Force control @ x N
sc x: Slip Control @ x N
-->
[rospy.internal][INFO] 2022-02-23 12:05:28,977: topic[/Robotiq2FGripperRobotOutput] adding connection to [/Robotiq2FGripperRtuNode], count 0
[rospy.internal][INFO] 2022-02-23 12:05:45,404: topic[/rosout] adding connection to [/rostopic_16397_1645617945169], count 1
[rospy.core][INFO] 2022-02-23 12:05:47,627: signal_shutdown [signal-2]
[rospy.internal][INFO] 2022-02-23 12:05:47,631: topic[/gripper_action_server/feedback] removing connection to /gripper_action_client
[rospy.internal][INFO] 2022-02-23 12:05:47,631: topic[/gripper_action_server/status] removing connection to /gripper_action_client
[rospy.internal][INFO] 2022-02-23 12:05:47,631: topic[/rosout] removing connection to /rosout
[rospy.internal][INFO] 2022-02-23 12:05:47,631: topic[/rosout] removing connection to /rostopic_16397_1645617945169
[rospy.internal][INFO] 2022-02-23 12:05:47,632: topic[/gripper_action_server/result] removing connection to /gripper_action_client
[rospy.internal][INFO] 2022-02-23 12:05:47,632: topic[/Robotiq2FGripperRobotOutput] removing connection to /Robotiq2FGripperRtuNode
[rospy.internal][INFO] 2022-02-23 12:05:47,632: topic[/gripper_action_server/goal] removing connection to http://FM00351-u:34949/
[rospy.internal][INFO] 2022-02-23 12:05:47,632: topic[/gripper_action_server/cancel] removing connection to http://FM00351-u:34949/
[rospy.internal][WARNING] 2022-02-23 12:05:47,633: Unknown error initiating TCP/IP socket to FM00351-u:37723 (http://FM00351-u:34949/): Traceback (most recent call last):
  File "/opt/ros/melodic/lib/python2.7/dist-packages/rospy/impl/tcpros_base.py", line 562, in connect
    self.read_header()
  File "/opt/ros/melodic/lib/python2.7/dist-packages/rospy/impl/tcpros_base.py", line 657, in read_header
    self._validate_header(read_ros_handshake_header(sock, self.read_buff, self.protocol.buff_size))
AttributeError: 'NoneType' object has no attribute 'buff_size'

[rospy.topics][ERROR] 2022-02-23 12:05:47,633: Traceback (most recent call last):
  File "/opt/ros/melodic/lib/python2.7/dist-packages/rospy/topics.py", line 326, in close
    c.close()
  File "/opt/ros/melodic/lib/python2.7/dist-packages/rospy/impl/tcpros_base.py", line 846, in close
    self.socket.close()
AttributeError: 'NoneType' object has no attribute 'close'

[rospy.impl.masterslave][INFO] 2022-02-23 12:05:47,633: signal-2
[rosout][ERROR] 2022-02-23 12:05:52,918: Exception in your execute callback: unexpected EOF while parsing (<string>, line 0)
Traceback (most recent call last):
  File "/opt/ros/melodic/lib/python2.7/dist-packages/actionlib/simple_action_server.py", line 289, in executeLoop
    self.execute_callback(goal)
  File "/home/ros/catkin_ws/src/fm_gripper_module/src/gripper_action_server.py", line 38, in execute
    Robotiq2FGripperSlipController().controller()
  File "/home/ros/catkin_ws/src/fm_gripper_module/src/Robotiq2FGripperSlipController.py", line 801, in controller
    inputs = self.askForInput(self.command)
  File "/home/ros/catkin_ws/src/fm_gripper_module/src/Robotiq2FGripperSlipController.py", line 774, in askForInput
    return input(strAskForCommand)
  File "<string>", line 0
    
    ^
SyntaxError: unexpected EOF while parsing

[rospy.core][INFO] 2022-02-23 12:05:53,024: signal_shutdown [atexit]
